--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-      <span>This is line 1</span>
+      <h2>This is line 1</h2>
   </body>
 </html>
